--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 		
 	</head>
-	<link rel="stylesheet" href="lab2.css";
+	<link rel="stylesheet" href="style.css";
 	<body>
 		<h1 >About Salimov Timur</h1>
 		<p>My name is <span>Timur</span> , I am a <span>student</span> and <span>mma fighter</span> </p>
@@ -30,6 +30,7 @@
 		<ul>
 			<li>Saara  Jonea : Love to play piano </li>
 			<li>Jamila : Love to dancing every evening time </li>
+			<li><a href="lab-2-timoor97">lab-2-timoor97</a></li>
 		</ul>
 		<img src="photo_2019-02-07_18-12-39.jpg"/>
 		<img src="photo_2019-02-07_18-12-39.jpg"/>
