--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		
+		<link rel="stylesheet" href="style.css">
 	</head>
-	<link rel="stylesheet" href="style.css";
+	
 	<body>
 		<h1 >About Salimov Timur</h1>
 		<p>My name is <span>Timur</span> , I am a <span>student</span> and <span>mma fighter</span> </p>
